--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,5 +15,48 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="/">Panier</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse  justify-content-between" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href=" ">Accueil</a>
+                    </li>
+
+{#                    {% if app.user %}#}
+{#                        <li class="nav-item active">#}
+{#                            <a class="nav-link" href=" ">Accueil</a>#}
+{#                        </li>#}
+{#                    {% endif %}#}
+                </ul>
+                <ul class="navbar-nav mr-auto form-inline">
+                    {% if app.user %}
+                        <span class="navbar-text">Hello </span>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{{ path('main') }}">Accueil</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href=" ">Mon profil</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href=" ">Déconnexion</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item active">
+                            <a class="nav-link" href=" ">Créer un compte</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href=" ">Se connecter</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+
     </body>
 </html>
