--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,6 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="/">Panier</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -57,6 +56,9 @@
                 </ul>
             </div>
         </nav>
-
+        <main>
+            {% block main %}
+            {% endblock %}
+        </main>
     </body>
 </html>
