--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,24 +14,17 @@
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/">Panier</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
 
             <div class="collapse navbar-collapse  justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href=" ">Accueil</a>
                     </li>
+                    {#<li class="nav-item active">
+                        <a class="nav-link" href="{{ path('') }}">Afficher une sortie</a>
+                      </li>#}
 
-{#                    {% if app.user %}#}
-{#                        <li class="nav-item active">#}
-{#                            <a class="nav-link" href=" ">Accueil</a>#}
-{#                        </li>#}
-{#                    {% endif %}#}
+
                 </ul>
                 <ul class="navbar-nav mr-auto form-inline">
                     {% if app.user %}
@@ -40,17 +33,17 @@
                             <a class="nav-link" href="{{ path('main') }}">Accueil</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href=" ">Mon profil</a>
+                            <a class="nav-link" href="{{ path('profil', {'id':1}) }}">Mon profil</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href=" ">Déconnexion</a>
+                            <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
                         </li>
                     {% else %}
                         <li class="nav-item active">
-                            <a class="nav-link" href=" ">Créer un compte</a>
+                            <a class="nav-link" href="{{ path('register') }}">Créer un compte</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href=" ">Se connecter</a>
+                            <a class="nav-link" href="{{ path('app_login') }} ">Se connecter</a>
                         </li>
                     {% endif %}
                 </ul>
