--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,9 +20,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" href=" ">Accueil</a>
                     </li>
-                    {#<li class="nav-item active">
-                        <a class="nav-link" href="{{ path('') }}">Afficher une sortie</a>
-                      </li>#}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ path('liste_sorties') }}">Liste sorties</a>
+                      </li>
 
 
                 </ul>
