--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,13 +1,31 @@
-
+{% extends 'index_base.html.twig' %}
 
 {% block title %}Register{% endblock %}
 
-{% block body %}
 
-{{ form_start(form) }}
-{{ form_widget(form)}}
-    <button type="submit">S'inscrire</button>
-    {{ form_end(form) }}
+{% block body%}
+    {{ parent() }}
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                {% for flashError in app.flashes('verify_email_error') %}
+                    <div class="alert alert-danger" role="alert">{{ flashError }}</div>
+                {% endfor %}
 
+                <h1>Création de compte</h1>
 
+                {{ form_start(registrationForm) }}
+                {{ form_row(registrationForm.nom) }}
+                {{ form_row(registrationForm.prenom) }}
+                {{ form_row(registrationForm.email) }}
+
+                {{ form_row(registrationForm.plainPassword, {
+                    label: 'Password'
+                }) }}
+
+                <button type="submit" class="btn btn-lg btn-primary">Créer mon compte</button>
+                {{ form_end(registrationForm) }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
