--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'index_base.html.twig' %}
 
 {% block title %}Se connecter{% endblock %}
 
-{% block main %}
+{% block body %}
     {{ parent() }}
 <form method="post">
     {% if error %}
@@ -16,24 +16,25 @@
     {% endif %}
 
     <h1 class="h3 mb-3 font-weight-normal">Connectez -vous!</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
-    <label for="inputPassword">Mot de passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
-
+    <form class="row g-3">
+        <div class="col-auto">
+            <label for="staticEmail2" class="visually-hidden">Email</label>
+            <input type="text"  class="form-control" id="staticEmail2" placeholder="Votre adresse mail" required autofocus>
+        </div>
+        <div class="col-auto">
+            <label for="inputPassword2" class="visually-hidden">Password</label>
+            <input type="password" class="form-control" id="inputPassword2" placeholder="Mot de passe" required>
+        </div>
     <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+           value="{{ csrf_token('authenticate') }}">
 
         <div class="checkbox mb-3">
             <label>
                 <input type="checkbox" name="_remember_me"> Se souvenir de moi
             </label>
         </div>
-
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Se connecter
-    </button>
+        <div class="col-auto">
+            <button type="submit" class="btn btn-primary mb-3">Se connecter</button>
+        </div>
 </form>
 {% endblock %}
