--- a/templates/sortie/detailSortie.html.twig
+++ b/templates/sortie/detailSortie.html.twig
@@ -1,10 +1,11 @@
-{% extends '../base.html.twig' %}
+{% extends 'index_base.html.twig' %}
 
-{{ parent() }}
+
 
 {% block title %} {{ sortie.nom }} {% endblock %}
 
 {% block main %}
+    {{ parent() }}
     <section class="">
         <h1 class="text-center  my-3">Sortie | {{ sortie.nom }}</h1>
 
@@ -20,7 +21,7 @@
             </div>
             <div class="row justify-content-around">
                 <div class="col-4">
-                    <p><span class="font-weight-bold">Date et heure de la sortie :</span> {{ sortie.DateHeureDebut|date('d/m/Y H:i')}}</p>
+                    <p><span class="font-weight-bold">Date et heure de la sortie :</span> {{ sortie.Datedebut|date('d/m/Y H:i')}}</p>
                 </div>
                 <div class="col-4">
                     <p><span class="font-weight-bold">Lieu :</span> {{ sortie.lieu.nom }}</p>
