--- a/templates/security/profils.html.twig
+++ b/templates/security/profils.html.twig
@@ -1,9 +1,9 @@
 
-{%  extends 'index_base.html.twig' %}
+{%  extends 'base.html.twig' %}
 
-{% block title %}Profil {% endblock %}
+{% block title %}{{ parent() }} |{{ page_name }} {% endblock %}
 
-{% block body %}
+{% block main %}
     <div class="text-center">
                             <h1><strong>Participant</strong></h1>
         <div>
