--- a/templates/sortie/annulerSortie.html.twig
+++ b/templates/sortie/annulerSortie.html.twig
@@ -2,3 +2,9 @@
 
 {% block main %}
 {{ parent() }}
+
+<h3>Annuler une sortie</h3>
+{{ form_start(form) }}
+{{ form_widget(form) }}
+
+{% endblock %}
